Add visible change for pull request testing

--- a/index.html
+++ b/index.html
@@ -2,3 +2,4 @@
 "<!-- Testing PR webhook -->" 
 "<!-- Webhook test change -->" 
 "<!-- PR test from feature-update branch -->" 
+"<h2>This change is only in the feature-update branch</h2>" 
